<resources>
    <string name="app_name">Estudo</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="login">Login</string>
    <string name="vermelho">Vermelho</string>
    <string name="azul">Azul</string>
    <string name="verde">Verde</string>
    <string name="salvar">Salvar</string>
    <string name="escolha_seu_tema_preferido">Escolha seu tema preferido</string>
    <string name="manter_dados">Manter Dados?</string>
    <string name="login1">Login</string>
</resources>
